--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ plugins:
 title: Sunshine Holiday
 description: Travel Company
 show_downloads: false
-#google_analytics: [Your Google Analytics tracking ID]
+logo: /assets/img/logo.png
+google_analytics:
