--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ plugins:
 title: Sunshine Holiday
 description: Travel Company
 show_downloads: false
-logo: /assets/img/logo.png
+logo: /assets/img/logo-small.png
 google_analytics:
